--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <td style="border: hidden; text-align: center; color: rgba(0, 0, 255, 0.959);"><b>Forgot Password?</b><hr></td>
     </tr>
    <tr>
+
     <td style="position: relative; border-left-width: 60px; border-right-width: 60px; background-color: rgb(9, 241, 21); color: white; text-align: center;"><b>Create new account</b></td>
    </tr> 
    
@@ -36,5 +37,7 @@
  <p1><b>Create a page</b> for a celebrity, branch or business.</p1>
 </div>
 
+
+    <p> Gwapo ko!!!</p>
 </body>
 </html>
